[gd_scene load_steps=6 format=3 uid="uid://cex42gq7xbw5s"]

[ext_resource type="Script" path="res://wfc editor/scripts/sprite_splitter.gd" id="1_l8iva"]
[ext_resource type="Script" path="res://wfc editor/scenes/main_content_scroll.gd" id="2_dse3f"]
[ext_resource type="Texture2D" uid="uid://b5w5lbt6vu5tp" path="res://icon.svg" id="2_ejpxu"]
[ext_resource type="Texture2D" uid="uid://6rr65xe0apqa" path="res://wfc editor/assets/zoom_out.svg" id="2_xa3cx"]
[ext_resource type="Texture2D" uid="uid://64cstv6u4je8" path="res://wfc editor/assets/zoom_in.svg" id="3_53l1h"]

[node name="SpriteSplitter" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(800, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -225.5
offset_right = 400.0
offset_bottom = 225.5
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
script = ExtResource("1_l8iva")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Header1" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header1"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Offset: 
"

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SpinBox" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="SpinBox2" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Spacer4" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Size:
"

[node name="Spacer5" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SpinBox3" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Spacer6" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="SpinBox4" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Spacer7" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Spacing:"

[node name="Spacer8" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="SpinBox5" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Spacer9" type="Control" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="SpinBox6" type="SpinBox" parent="Panel/VBoxContainer/Header1/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="Header2" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Header2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="ZoomOutButton" type="TextureButton" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_xa3cx")
stretch_mode = 5

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="Label" type="Label" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Zoom
"

[node name="Spacer3" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(3, 0)
layout_mode = 2

[node name="ZoomInButton" type="TextureButton" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_53l1h")
stretch_mode = 5

[node name="Spacer4" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="Label2" type="Label" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "File:"

[node name="Spacer5" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Spacer6" type="Control" parent="Panel/VBoxContainer/Header2/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MainContentScroll" type="ScrollContainer" parent="Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
scroll_horizontal = 2100
scroll_vertical = 2330

[node name="MainContent" type="Control" parent="Panel/VBoxContainer/MainContentScroll"]
clip_contents = true
custom_minimum_size = Vector2(5000, 5000)
layout_direction = 2
layout_mode = 2
size_flags_stretch_ratio = 6.0
mouse_filter = 1
script = ExtResource("2_dse3f")

[node name="TextureRect" type="TextureRect" parent="Panel/VBoxContainer/MainContentScroll/MainContent"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ejpxu")

[node name="HScrollBar" type="HScrollBar" parent="Panel/VBoxContainer/MainContentScroll/MainContent"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="VScrollBar" type="VScrollBar" parent="Panel/VBoxContainer/MainContentScroll/MainContent"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0

[node name="Footer" type="Panel" parent="Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer/Footer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Spacer1" type="Control" parent="Panel/VBoxContainer/Footer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="Button" type="Button" parent="Panel/VBoxContainer/Footer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
mouse_filter = 2
text = "CLOSE
"

[node name="Spacer2" type="Control" parent="Panel/VBoxContainer/Footer/HBoxContainer"]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[connection signal="pressed" from="Panel/VBoxContainer/Header2/HBoxContainer/ZoomOutButton" to="Panel" method="_on_zoom_out_button_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Header2/HBoxContainer/ZoomInButton" to="Panel" method="_on_zoom_in_button_pressed"]
